Fix bug with overflow

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ p {
     background-size: contain;
     background-repeat: no-repeat;
     width: 200px;
-    padding-left: 50px;
+    padding-left: 40px;
     padding-top: 30px;
     height: 230px;
     margin-left: 20px;
